Lots of work done, Certificate+Approval+Email+Icones+Homepage+stock management

--- a/templates/Admin/certificate.html
+++ b/templates/Admin/certificate.html
@@ -1,14 +1,15 @@
+
 <div style="width:800px; height:600px; padding:20px; text-align:center; border: 10px solid #787878">
     <div style="width:750px; height:550px; padding:20px; text-align:center; border: 5px solid #787878">
-           <span style="font-size:50px; font-weight:bold; color:red;">Certificate of Blood Donation</span>
-           <br><br><br>
-           <span style="font-size:25px"><i>This is to certify that</i></span>
-           <br><br>
-           <span style="font-size:30px"><small>Mr/Mrs</small> &nbsp;<b>{{name}}</b></span><br/><br/>
-           <span style="font-size:25px"><i>has Donated <strong>{{unit}} <small>ML</small></strong> of '<strong>{{bg}}</strong>' Blood</i></span> <br/><br/>
-           <span style="font-size:20px">through our blood bank to serve the Humanity.</span> <br/><br/>
-           <span style="font-size:20px">We wish for your good health.</b></span> <br/><br/><br/><br/><br/><br/>
-           <div style="display:flex; flex-direction:row;">
+            <span style="font-size:40px; font-weight:bold; color:red;"><u>Certification of Blood Donation</u></span>
+            <br><br><br><br>
+            <span style="font-size:25px"><i>This is to certify that</i></span>
+            <br><br>
+            <span style="font-size:30px"><small>Mr/Mrs</small> &nbsp;<b>{{name}}</b></span><br/><br/>
+            <span style="font-size:25px"><i>has Donated <strong>{{unit}} <small>ML</small></strong> of '<strong>{{bg}}</strong>' Blood</i></span> <br/><br/>
+            <span style="font-size:20px">through our blood bank to serve the Humanity.</span> <br/><br/>
+            <span style="font-size:20px">We wish for your good health.</b></span> <br/><br/><br/><br/><br/><br/>
+            <div style="display:flex; flex-direction:row;">
             <div style="display:flex; flex-direction:column;text-align:right; width:50%;">
                 <span style="font-size:20px"><b><u>Certified by: </u></b></span> <br/><br>
                 <span style="font-size:20px"><strong>Iamgovinda</strong></span> <br/><br/>
@@ -17,6 +18,6 @@
                 <span style="font-size:20px"><b><u>Certified to: </u></b></span> <br/><br/>
                 <span style="font-size:20px"><strong>{{name}}</strong></span> <br/><br/>
             </div>
-           </div>
+            </div>
     </div>
     </div>
