--- a/templates/Blood_Bank/navbar.html
+++ b/templates/Blood_Bank/navbar.html
@@ -11,14 +11,14 @@
     <script src="https://kit.fontawesome.com/7a89f58fe1.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header class="header" pb-5>
+
         <nav class="navbar fixed-top navbar-expand-sm navbar-dark" style="background-color: #FF0000; border-bottom:3px solid black">
           <div class="logo">
             <div class="imgleft">
               <img src="{% static 'images/OIP.jpg' %}" alt="">
             </div>&nbsp;
             <div class="bbms">
-              <a class="navbar-brand" href="/" style="color:#FFFFFF;"><b>Blood Bank Management System</b></a>
+              <a class="navbar-brand" href="#" style="color:#FFFFFF;"><b>Blood Bank Management System</b></a>
             </div>
           </div>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,7 +64,6 @@
             </ul>
           </div>
         </nav>
-      </header>
-      <hr/>
+        <hr>
 </body>
 </html>
