--- a/templates/User/client_dash_base.html
+++ b/templates/User/client_dash_base.html
@@ -165,7 +165,7 @@
         <ul>
             <li><a style="text-decoration:none;" href="/client/client-dash/"><i class="fas fa-home"></i>Home</a></li>
             <li><a style="text-decoration:none;" href="/client/make-request/"><i class="fas fa-sync-alt"></i>Request Blood</a></li>
-            <li><a style="text-decoration:none;" href="/client/donate-blood/"><i class="fas fa-sync-alt"></i>Donate Blood</a></li>
+            <li><a style="text-decoration:none;" href="/client/donate-blood/"><i class="fas fa-code-pull-request"></i> Donate Blood</a></li>
           
             <li><a style="text-decoration:none;" href="/client/my-request/"><i class="fas fa-history"></i>Request History</a></li>
 
@@ -173,6 +173,25 @@
 
     </div>
     <div class="main_content">
+    {% if messages %}
+    {% for message in messages %}
+    {% comment %} <div class="alert alert-success" role="alert" style="padding:5px; margin-bottom:0px; margin-top:48px;">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <strong>{{message}}</strong>
+    </div> {% endcomment %}
+    <p id="alert" class="alert alert-{{ message.tags }}" style="padding:5px; margin-bottom:0px; margin-top:0px; text-align:center;">
+      {{message}}
+    </p>
+
+  <script type="text/javascript">
+      setTimeout(function () {
+
+          // Closing the alert
+          $('#alert').alert('close');
+      }, 3000);
+  </script>
+    {% endfor %}
+  {% endif %}
 
 
 {% block content %}
