--- a/templates/User/donateblood.html
+++ b/templates/User/donateblood.html
@@ -6,7 +6,7 @@
 <div class="container">
     <br><br>
     <hr>
-    <h3 align="center"><strong>View Campaigns</strong></h3>
+    <h3 align="center"><strong>View Available Campaigns</strong></h3>
     <hr>
       <div class="row d-flex justify-content-center align-items-center h-100">
           {% for campaign in campaigns %}
