--- a/templates/User/mybloodrequest.html
+++ b/templates/User/mybloodrequest.html
@@ -15,6 +15,7 @@
                 <th scope="col">Unit</th>
                 <th scope="col">Date</th>
                 <th scope="col">Status</th>
+                <th scope="col">Remarks</th>
                 
             </tr>
         </thead>
@@ -24,37 +25,22 @@
                 <td> {{t.patient_name}}</td>
                 <td>{{t.patient_age}}</td>
                 <td>{{t.patient_bloodgroup}}</td>
-                <td>{{t.unit}}</td>
+                <td>{{t.unit}} ML</td>
                 <td>{{t.request_date}}</td>
                 {% if t.status == 'Approved' %}
-                <td><span class="bg-success"> Approved</span></td>
-                
+                    <td><span class="bg-success"> Approved</span><br>
+                        <a class="btn btn-success btn-sm" style="text-decoration:none" href="{% url 'view_approval' t.id %}">Approval</a>
+                    </td>
+                    <td><span style="color: green;"><strong>Your request has been approved!</strong></span></td>
+                {% elif t.status == 'Given' %}
+                    <td><span class="bg-success">Received</span></td>  
+                    <td><span style="color: green;"><strong>You have recieved the blood!</strong></span></td>              
                 {% elif t.status == 'Rejected' %}
-                <td><span class="bg-danger">Rejected</span>
-                    <!-- Button trigger modal -->
-                     <button type="button" class="btn btn-primary " data-toggle="modal" data-target="#exampleModal">Reason</button></td>
-                <!-- Modal -->
-                    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header bg-danger">
-                            <h5 class="modal-title" id="exampleModalLabel">Rejection Message</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                            </div>
-                            <div class="modal-body">
-                                <h3><strong>{{ t.response_message }}</strong></h3>
-                            </div>
-                            <div class="modal-footer bg-info">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            </div>
-                        </div>
-                        </div>
-                    </div>
-                </div>
+                    <td><span class="bg-danger">Rejected</span>
+                    <td><span style="color:red;"><strong>{{t.response_message}}</strong></span></td>
                 {% else %}
-                <td><span style="color: black;margin-left: 0px;" class="bg-info">Pending</span></td>
+                    <td><span style="color: black;margin-left: 0px;" class="bg-info">Pending</span></td>
+                    <td><span style="color:yellow;"><strong>Your request is in pending!</strong></span></td>
                 {% endif %} 
                 
 
@@ -100,12 +86,12 @@
 
                 {% elif t.status == 'Donated' %}
                 <td><span class="bg-success">Donated</span>
-                    <a class="btn btn-success" style="text-decoration:none" href="{% url 'view_certificate' t.id %}">certificate</a></td> 
+                    <a class="btn btn-success btn-sm" style="text-decoration:none" href="{% url 'view_certificate' t.id %}">certificate</a></td> 
                     <td><span class="bg-success">You have donated {{t.unit}} unit Blood!</span></td>
                 {% elif t.status == 'Rejected' %}
-                <td><span class="bg-danger">Rejected</span> &nbsp &nbsp &nbsp
+                <td><span class="bg-danger">Rejected</span> &nbsp 
                     <!-- Button trigger modal -->
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Reason</button>
+                <button type="button" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#exampleModal">Reason</button>
                 </td>
                 <td><span class="bg-danger">Donation Request is Rejected!</span></td>
                 <!-- Modal -->
