--- a/templates/Admin/admin_dashboard.html
+++ b/templates/Admin/admin_dashboard.html
@@ -108,59 +108,118 @@
           </div>
       </div>
 <hr>
-    <div class="row">
-      <div class="col-sm-3">
-        <div class="card " style="background-color: #9E9E9E;">
-          <div class="card-body">
-              <div class="blood">
-                  <i class="fas fa-users" style="color: red;"></i>
-              </div><br>
-              <div>
-                  Total Donors <br>
-                  {% comment %} {{totaldonors}} {% endcomment %}
-              </div>                            
+<br>
+<h4 style="text-align:center;"><b>Donation Requests</b></h4>
+<div class="row">
+    <div class="col-sm-3">
+      <div class="card bg-danger">
+        <div class="card-body">
+            <div class="blood">
+                <i class="fas fa-users"></i>
+            </div><br>
+            <div>
+                <strong>Total Requests</strong> <br>
+                <b><strong>{{dr_total}}</strong></b>
+            </div>                            
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-3">
+        <div class="card bg-danger">
+            <div class="card-body">
+                <div class="blood">
+                    <i class="fas fa-spinner"></i>
+                </div><br>
+                <div>
+                    <strong>Pending Requests</strong> <br>
+                   <b><strong>{{dr_pending}}</strong></b>
+                </div>                            
+            </div>
           </div>
-        </div>
+    </div>
+    <div class="col-sm-3">
+        <div class="card bg-danger">
+            <div class="card-body">
+                <div class="blood">
+                    <i class="far fa-check-circle"></i>
+                </div><br>
+                <div>
+                    <strong>Approved Requests</strong> <br>
+                    <b><strong>{{dr_approved}}</strong></b>
+                </div>                            
+            </div>
+          </div>
       </div>
       <div class="col-sm-3">
-          <div class="card" style="background-color: #9E9E9E;">
-              <div class="card-body">
-                  <div class="blood">
-                      <i class="fas fa-spinner" style="color: red;"></i>
-                  </div><br>
-                  <div>
-                      Requests in Progress <br>
-                     {% comment %} {{totalrequest}} {% endcomment %}
-                  </div>                            
-              </div>
+        <div class="card bg-danger">
+            <div class="card-body">
+                <div class="blood">
+                    <i class="fas fa-tint xyz"></i>
+                </div><br>
+                <div>
+                    <strong>Rejected Requests</strong> <br>
+                    <b><strong>{{dr_rejected}}</strong></b>
+                </div>                            
             </div>
+          </div>
+      </div>
+  </div>
+  <hr>
+  <h4 style="text-align:center;"><b>Blood Requests</b></h4>
+  <div class="row">
+    <div class="col-sm-3">
+      <div class="card bg-danger">
+        <div class="card-body">
+            <div class="blood">
+                <i class="fas fa-users"></i>
+            </div><br>
+            <div>
+                <strong>Total Requests</strong> <br>
+                <b><strong>{{br_total}}</strong></b>
+            </div>                            
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-3">
+        <div class="card bg-danger">
+            <div class="card-body">
+                <div class="blood">
+                    <i class="fas fa-spinner"></i>
+                </div><br>
+                <div>
+                    <strong>Pending Requests</strong> <br>
+                   <b><strong>{{br_pending}}</strong></b>
+                </div>                            
+            </div>
+          </div>
+    </div>
+    <div class="col-sm-3">
+        <div class="card bg-danger">
+            <div class="card-body">
+                <div class="blood">
+                    <i class="far fa-check-circle"></i>
+                </div><br>
+                <div>
+                    <strong>Approved Requests</strong> <br>
+                    <b><strong>{{br_approved}}</strong></b>
+                </div>                            
+            </div>
+          </div>
       </div>
       <div class="col-sm-3">
-          <div class="card" style="background-color: #9E9E9E;">
-              <div class="card-body">
-                  <div class="blood">
-                      <i class="far fa-check-circle" style="color: red;"></i>
-                  </div><br>
-                  <div>
-                      Approved Requests <br>
-                      {% comment %} {{totalapprovedrequest}} {% endcomment %}
-                  </div>                            
-              </div>
+        <div class="card bg-danger">
+            <div class="card-body">
+                <div class="blood">
+                    <i class="fas fa-tint xyz"></i>
+                </div><br>
+                <div>
+                    <strong>Rejected Requests</strong> <br>
+                    <b><strong>{{br_rejected}}</strong></b>
+                </div>                            
             </div>
-        </div>
-        <div class="col-sm-3">
-          <div class="card" style="background-color: #9E9E9E;">
-              <div class="card-body">
-                  <div class="blood">
-                      <i class="fas fa-tint xyz" style="color: red;"></i>
-                  </div><br>
-                  <div>
-                      Total Blood Unit (in ml) <br>
-                      {% comment %} {{totalbloodunit}} {% endcomment %}
-                  </div>                            
-              </div>
-            </div>
-        </div>
+          </div>
+      </div>
+  </div>
     </div>
 </div>
 
