--- a/templates/Admin/blood_stock.html
+++ b/templates/Admin/blood_stock.html
@@ -1,7 +1,9 @@
 {% extends 'Admin/admin_dash_base.html' %}
-{% block content %}
 {% load static %}
 {% load crispy_forms_tags %}
+
+{% block content %}
+
 <div class="container">
     <br>
     <hr>
@@ -112,10 +114,10 @@
 <hr>
 <hr>
 <br>
-<h3 class="text-center"><b>Add blood</b></h3>
+<div align="center" class="container bg-danger" style="border-radius:5%; width:60%; border: 3px solid black;">
+<h3 class="text-center"><b>Add blood from donors</b></h3>
 <hr>
-<div align="center">
-<h3>For Pre-Registered Donors</h3>
+<h3><u>For Pre-Registered Donors</u></h3>
 <br>
 <form action="/admin/blood-stock/" method="POST">
   {% csrf_token %}
@@ -130,10 +132,10 @@
   <br>
   <button type="submit" class="btn btn-primary">Add Blood</button>
 </form>
-</div>
+
 <hr>
-<div align="center">
-  <h3>For New Users</h3>
+
+  <h3><u>For New Donors</u></h3>
 
   <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
@@ -145,8 +147,8 @@
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Donate Blood</h5>
+      <div class="modal-header" style="background-color:red;">
+        <h5 class="modal-title" id="exampleModalLabel" >Donate Blood</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -157,9 +159,65 @@
           {{donationform|crispy}}
           Blood Unit: <input type="number" name="unit">
       </div>
-      <div class="modal-footer">
+      <div class="modal-footer" style="background-color:blue;">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
         <button type="submit" class="btn btn-danger" >Add to Stock</button>
+      </div>
+    </form>
+    </div>
+  </div>
+</div>
+</div>
+
+<hr>
+<br>
+<div align="center" class="container bg-danger" style="border-radius:5%; width:60%; border: 3px solid black;">
+<h3 class="text-center"><b>Give Blood to patients</b></h3>
+<hr>
+<u><h3>For Pre-Registered Patients</h3></u>
+<br>
+<form action="/admin/give-blood/" method="POST">
+  {% csrf_token %}
+  <select class="form-select form-select-lg mb-3" name="patientid">
+    <option value="SELECTED" selected>Choose Patient</option>
+    {% for patient in patients %}
+      <option value="{{patient.id}}">{{patient.patient_name}}</option>
+    {% endfor %}
+  </select>&nbsp;&nbsp;
+  <label for="bunit"><b>Blood Unit</b></label>
+ <input type="number" name="bunit">
+  <br>
+  <button type="submit" class="btn btn-primary">Give Blood</button>
+</form>
+
+<hr>
+
+  <h3>For New Patient</h3>
+
+  <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal2">
+  Give Blood
+</button>
+<hr>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header bg-danger">
+        <h5 class="modal-title" id="exampleModalLabel">Give Blood</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form action="/admin/give-blood-new/" method="post">
+          {% csrf_token %}
+          {{bloodrequestform|crispy}}
+        </div>
+      <div class="modal-footer bg-info">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <button type="submit" class="btn btn-danger" >Give Blood</button>
       </div>
     </form>
     </div>
