--- a/templates/Blood_Bank/base.html
+++ b/templates/Blood_Bank/base.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="{% static 'css/home.css' %}">
     <title>Blood Bank Management System!</title>
     <style>
+
         {% block css %}
         
         {% endblock css %}
@@ -20,17 +21,46 @@
 
   </head>
   <body>
-    <div class="top">
-      {% include "Blood_Bank/navbar.html" %}
-    </div>
+    {% include "Blood_Bank/navbar.html" %} 
+    <br><br>
+    <div class="wrapper" style="margin-top: -16px;">
+    {% if messages %}
+    {% for message in messages %}
+    {% comment %} <div class="alert alert-success" role="alert" style="padding:5px; margin-bottom:0px; margin-top:48px;">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <strong>{{message}}</strong>
+    </div> {% endcomment %}
+    <p id="alert" class="alert alert-{{ message.tags }}" style="padding:5px; margin-bottom:0px; margin-top:0px; text-align:center;">
+      {{message}}
+    </p>
 
+  <script type="text/javascript">
+      setTimeout(function () {
+
+          // Closing the alert
+          $('#alert').alert('close');
+      }, 3000);
+  </script>
+    {% endfor %}
+  {% endif %}
     {% block content %}
     
     {% endblock content %}
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
+      {% comment %} window.setTimeout(function() {
+        $(".alert").fadeTo(500, 0).slideUp(500, function(){
+            $(this).remove(); 
+        });
+    }, 2000); {% endcomment %}
+    <div class="foot" style="background-color:red;">
+      {% include "Blood_Bank/footer.html" %}
+    </div> 
+  </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-growl/1.0.0/jquery.bootstrap-growl.min.js"></script>
   </body>
 </html>
