--- a/templates/User/client_dashboard.html
+++ b/templates/User/client_dashboard.html
@@ -1,4 +1,5 @@
 {% extends 'User/client_dash_base.html' %}
+{% block title %}Client Dashboard{% endblock title %}
 {% block content %}
 <div class="container">
     <br>
