Some Issues fixed, history messages, medicalreport, render_pdf error

--- a/templates/Admin/create_campaign.html
+++ b/templates/Admin/create_campaign.html
@@ -50,13 +50,13 @@
               <hr>
                 <a href="{% url 'edit_campaign' campaign.id %}" class="btn btn-info" style="text-decoration:None; color:white;">Edit</a>
               {% comment %}  {% endcomment %}
-              <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
+              <button type="button" class="btn btn-danger" data-toggle="modal" data-target="##{{campaign.id}}example1">
                 Delete
               </button>
             </div>
           </div>
           <!-- Delete Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="#{{campaign.id}}example1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
