--- a/templates/Admin/viewclient.html
+++ b/templates/Admin/viewclient.html
@@ -29,11 +29,11 @@
                     <button class="btn btn-info"><a href="{% url 'update_client' t.user.id %}" style="text-decoration:none; color:white;">Edit</a></button>
                     &nbsp 
                     {% comment %} <button class="btn btn-danger"><a href="{% url 'delete_client' t.user.id %}" style="text-decoration:none; color:white;">Delete</a></button> {% endcomment %}
-                    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
+                    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#{{t.id}}exampleModal1">
                         Delete
                     </button>
                 </td>
-                <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal fade" id="{{t.id}}exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                       <div class="modal-content">
                         <div class="modal-header">
