--- a/templates/User/makerequest.html
+++ b/templates/User/makerequest.html
@@ -17,16 +17,7 @@
                 {{bloodrequestform|crispy}}
                 <input type="hidden" name="requestfromuser" value="{{request.user}}">
                 <button type="submit" class="btn btn-danger">Make Request</button>
-              </form><br><br>
-              <div class="col-md-12">
-                {% if messages %}
-                  {% for message in messages %}
-                    <div class="alert alert-danger">
-                      {{ message }}
-                    </div>
-                  {% endfor %}
-                {% endif %}
-              </div> 
+              </form>
 
             </div>
           </div>
