--- a/templates/User/mybloodrequest.html
+++ b/templates/User/mybloodrequest.html
@@ -13,7 +13,7 @@
                 <th scope="col">Patient Age</th>
                 <th scope="col">Blood Group</th>
                 <th scope="col">Unit</th>
-                <th scope="col">Date</th>
+                <th scope="col">Request Date</th>
                 <th scope="col">Status</th>
                 <th scope="col">Remarks</th>
                 
@@ -36,11 +36,35 @@
                     <td><span class="bg-success">Received</span></td>  
                     <td><span style="color: green;"><strong>You have recieved the blood!</strong></span></td>              
                 {% elif t.status == 'Rejected' %}
-                    <td><span class="bg-danger">Rejected</span>
-                    <td><span style="color:red;"><strong>{{t.response_message}}</strong></span></td>
+                    <td>
+                        <span class="bg-danger">Rejected</span>
+                                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#{{t.id}}example2">Reason</button>
+                        <!-- Modal -->
+                        <div class="modal fade" id="{{t.id}}example2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header bg-danger">
+                                <h5 class="modal-title" id="exampleModalLabel">Rejection Message</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                                </div>
+                                <div class="modal-body">
+                                    <h3><strong>{{ t.response_message }}</strong></h3>
+                                </div>
+                                <div class="modal-footer bg-info">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                </div>
+                            </div>
+                            </div>
+                        </div>
+                    </td>
+
+                    <td><span style="color:red;"><strong>Your Request has been rejected</strong></span></td>
                 {% else %}
                     <td><span style="color: black;margin-left: 0px;" class="bg-info">Pending</span></td>
-                    <td><span style="color:yellow;"><strong>Your request is in pending!</strong></span></td>
+                    <td><span class="bg-info"><strong>Your request is in pending!</strong></span></td>
                 {% endif %} 
                 
 
@@ -91,11 +115,11 @@
                 {% elif t.status == 'Rejected' %}
                 <td><span class="bg-danger">Rejected</span> &nbsp 
                     <!-- Button trigger modal -->
-                <button type="button" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#exampleModal">Reason</button>
+                <button type="button" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#{{t.id}}example1">Reason</button>
                 </td>
                 <td><span class="bg-danger">Donation Request is Rejected!</span></td>
                 <!-- Modal -->
-                    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal fade" id="{{t.id}}example1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog" role="document">
                         <div class="modal-content">
                             <div class="modal-header bg-danger">
