--- a/templates/User/client_dash_base.html
+++ b/templates/User/client_dash_base.html
@@ -166,7 +166,7 @@
             <li><a style="text-decoration:none;" href="/client/client-dash/"><i class="fas fa-home"></i>Home</a></li>
             <li><a style="text-decoration:none;" href="/client/make-request/"><i class="fas fa-sync-alt"></i>Request Blood</a></li>
             <li><a style="text-decoration:none;" href="/client/donate-blood/"><i class="fas fa-droplet"></i>Donate Blood</a></li>
-          
+            <li><a style="text-decoration:none;" href="/user/view_stock/"><i class="fas fa-briefcase"></i>View Stock</li>
             <li><a style="text-decoration:none;" href="/client/my-request/"><i class="fas fa-history"></i>Request History</a></li>
 
         </ul> 
