--- a/templates/Admin/blood_stock.html
+++ b/templates/Admin/blood_stock.html
@@ -114,7 +114,7 @@
 <hr>
 <hr>
 <br>
-<div align="center" class="container bg-danger" style="border-radius:5%; width:60%; border: 3px solid black;">
+<div align="center" class="container bg-danger" style="border-radius:5%; width:60%; border: 3px solid black; box-shadow:5px 5px;">
 <h3 class="text-center"><b>Add blood from donors</b></h3>
 <hr>
 <h3><u>For Pre-Registered Donors</u></h3>
@@ -171,7 +171,7 @@
 
 <hr>
 <br>
-<div align="center" class="container bg-danger" style="border-radius:5%; width:60%; border: 3px solid black;">
+<div align="center" class="container bg-danger" style="border-radius:5%; width:60%; border: 3px solid black; box-shadow:5px 5px;">
 <h3 class="text-center"><b>Give Blood to patients</b></h3>
 <hr>
 <u><h3>For Pre-Registered Patients</h3></u>
